tests/invalid/array_index_requires_integer.wio
fn Entry() -> i32 {
    let values: i32[] = [1, 2, 3];
    return values[1.5f];
}
